# sizeTable

./: requirements.txt
Embedded/QualityDeskControl/: CMakeLists.txt  main.c  main.h
Software/QualityDeskAPI/: pom.xml
Software/QualityDeskAPI/src/main/java/com/realsolutions/qualitydeskapi/: QualityDeskApiApplication.java
Software/QualityDeskAPI/src/main/java/com/realsolutions/qualitydeskapi/config/: SecurityConfig.java
Software/QualityDeskAPI/src/main/java/com/realsolutions/qualitydeskapi/controller/: ViewController.java
Software/QualityDeskAPI/src/main/java/com/realsolutions/qualitydeskapi/dao/: CardRepository.java  MeasurePointRepository.java  MeasurementRepository.java  OrderRepository.java  SizeRepository.java  StepRepository.java  UserCardRelationshipRepository.java  UserRepository.java
Software/QualityDeskAPI/src/main/java/com/realsolutions/qualitydeskapi/entity/: Card.java  Size.java  (+6 more)
Software/QualityDeskAPI/src/main/resources/: application.properties
Software/QualityDeskAPI/src/main/resources/static/assets/js/: app.js
Software/QualityDeskAPI/src/main/resources/templates/: card_definition.html  index.html  measure_point_definition.html  order_definition.html  size_definition.html  step_definition.html  user_card_relationship.html  user_definition.html
Software/QualityDeskAPI/src/test/java/com/realsolutions/qualitydeskapi/: QualityDeskApiApplicationTests.java
app/: __init__.py  config.py  models.py  views.py
app/static/assets/css/: app.css
app/static/assets/js/: app.js
app/templates/: index.html  order_definition.html  step_definition..html
(+22 files in other folders)
